--- a/.github/workflows/deploy-outer-test.yaml
+++ b/.github/workflows/deploy-outer-test.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   run-job-with-input:
-    uses: kubernetes/test-infra/.github/workflows/deploy-inner-test.yaml@master
+    uses: IndritFejza/test-gha/.github/workflows/deploy-inner-test.yaml@master
     with:
       input-string: ${{inputs.input-string}}
     permissions:
