--- a/.github/workflows/deploy-inner-test.yaml
+++ b/.github/workflows/deploy-inner-test.yaml
@@ -16,7 +16,7 @@ jobs:
       contents: read
     steps:
       - name: Tag Testrunner Image
-        if: ${{ inputs.input-string }}
+        if: $input-string
         shell: bash
         run: |
           echo "Running test with input: ${{ inputs.input-string }}"
