--- a/.github/workflows/deploy-inner-test.yaml
+++ b/.github/workflows/deploy-inner-test.yaml
@@ -6,7 +6,7 @@ on:
       input-string:
         type: string
         default: default-value
-        required: false
+        required: true
         description: |
           input-string to test if-condition in step-level
 jobs:
@@ -16,7 +16,7 @@ jobs:
       contents: read
     steps:
       - name: Tag Testrunner Image
-        if: ${{ inputs.input-string != '' }}
+        if: ${{ inputs.input-string == true }}
         shell: bash
         run: |
           echo "Running test with input: ${{ inputs.input-string }}"
