--- a/.github/workflows/deploy-inner-test.yaml
+++ b/.github/workflows/deploy-inner-test.yaml
@@ -18,7 +18,7 @@ jobs:
       INPUT_STRING: ${{ inputs.input-string }} 
     steps:
       - name: Tag Testrunner Image
-        if: env.INPUT_STRING
+        if: env.INPUT_STRING != null && env.INPUT_STRING != ''
         shell: bash
         run: |
           echo "Running test with input: ${{ inputs.input-string }}"
