--- a/.github/workflows/deploy-inner-test.yaml
+++ b/.github/workflows/deploy-inner-test.yaml
@@ -18,6 +18,7 @@ jobs:
       INPUT_STRING: ${{ inputs.input-string }} 
     steps:
       - name: Tag Testrunner Image
+        if:  ${{ '' != inputs.input-string }} 
         shell: bash
         run: |
           if [ -z "$INPUT_STRING" ]; then
@@ -27,4 +28,4 @@ jobs:
           fi
                     
           echo "Running test with input: ${{ inputs.input-string }}"
-          echo "Running test with input: $INPUT_STRING"
+          echo "Running test with input: toJSON($INPUT_STRING)"
